--- a/readable/package.json
+++ b/readable/package.json
@@ -14,6 +14,7 @@
     "react-modal": "^2.3.2",
     "react-moment": "^0.6.4",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-thunk": "^2.2.0",
